--- a/README
+++ b/README
@@ -90,7 +90,7 @@ The multibyte code is known to work with UTF-8 locales on the following
 systems:
 
 Linux		glibc 2.3.3
-Sun Solaris	10
+Sun Solaris	9 and later
 HP HP-UX	B.11.23
 FreeBSD		5.3
 NetBSD		2.0
@@ -103,7 +103,7 @@ the erase key once after entering a multibyte character will result in an
 incomplete byte sequence.
 
 
-Gunnar Ritter						12/12/04
+Gunnar Ritter						12/30/04
 Freiburg i. Br.
 Germany
 <Gunnar.Ritter@pluto.uni-freiburg.de>
