* The '\u', '\l', '\U', and '\L' substitution sequences work with multibyte   characters now.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Release ...
 * When a multicolumn character was replaced by another multicolumn character
   in insert mode, the display was not updated appropriately with terminals
   other than xterm.
+* The '\u', '\l', '\U', and '\L' substitution sequences work with multibyte
+  characters now.
 * Handle character case conversions with the '~' vi command correctly if the
   length of the converted multibyte sequence is smaller than the original one.
 * Fixed an old vi bug: If a vi command that yanked or deleted part of a line
