--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Release ...
 * When a multicolumn character was replaced by another multicolumn character
   in insert mode, the display was not updated appropriately with terminals
   other than xterm.
+* When a multicolumn character was inserted and then replaced, the visual
+  screen representation was sometimes not updated accordingly.
 * The '\u', '\l', '\U', and '\L' substitution sequences work with multibyte
   characters now.
 * Handle character case conversions with the '~' vi command correctly if the
