--- a/Changes
+++ b/Changes
@@ -11,6 +11,10 @@ Release ...
   the end of the new text.
 * Visual 'U' followed by 'u' lead to garbage on the screen when multibyte
   characters were present on the changed line.
+* The handling of multicolumn characters was fixed for terminals without the
+  IM (insert mode) capability. It is unlikely that such terminals actually
+  exist, but vi will use the corresponding code for open mode if a termcap
+  entry is not available.
 * The '\u', '\l', '\U', and '\L' substitution sequences work with multibyte
   characters now.
 * Handle character case conversions with the '~' vi command correctly if the
