--- a/Changes
+++ b/Changes
@@ -15,6 +15,8 @@ Release ...
   IM (insert mode) capability. It is unlikely that such terminals actually
   exist, but vi will use the corresponding code for open mode if a termcap
   entry is not available.
+* When an illegal multibyte sequence is entered in vi insert mode, no garbage
+  bytes are generated anymore when the insert mode is left.
 * The '\u', '\l', '\U', and '\L' substitution sequences work with multibyte
   characters now.
 * Handle character case conversions with the '~' vi command correctly if the
