--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Release ...
+* Made it work for Big5 locales (Patches by Matthew Fischer).
+* Fixed a problem with the 'r' command in EUC-JP and Big5 locales (Bugreport
+  by Matthew Fischer).
+
 Release 1/19/05
 * The last release erroneously made 'X' work like 'x' in visual mode. It now
   deletes the character before the cursor again as documented (Bugreport by
