--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Release ...
 * If a line began with a tabulator and another tabulator was inserted with
   the cursor located on the first tabulator, the display was not updated
-  appropriately since the last revision (Bugreport by Matthew Fischer). (P)
+  appropriately since the last release (Bugreport by Matthew Fischer). (P)
 * Fixed a segmentation fault that occured in multibyte locales when operation
   was continued after vi had been stopped by ^Z, with the cursor positioned
   in a line longer than the terminal width as the last line of the current
