--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
-Release ...
+Release 2/25/05
 * Traditional regular expressions can now be used with multibyte characters.
 * When the 'ignorecase' option is toggled, saved regular expressions are now
-  updated accordingly.
+  updated accordingly. (P)
 * If a line began with a tabulator and another tabulator was inserted with
   the cursor located on the first tabulator, the display was not updated
   appropriately since the last release (Bugreport by Matthew Fischer). (P)
