--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@ Release ...
   screen after an insertion.
 * The 'p' command now works correctly if the buffer contains a partial line
   with multibyte characters.
+* Traditional regular expressions sometimes failed to operate correctly
+  since the last release.
 
 Release 2/25/05
 * Traditional regular expressions can now be used with multibyte characters.
