--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Release ...
+Release 3/25/05
 * vi no longer dies with a segmentation fault if a line does not fit on the
   screen after an insertion.
 * The 'p' command now works correctly if the buffer contains a partial line
