--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@ Release ...
   shows the beginning of a line that does not fit onto the screen in its
   entirety.
 * Viewing executables and compressed files is no longer inhibited.
+* A bug in the supplied realloc() replacement could result in heap
+  corruption. (No resulting failures have been observed with ex so far.)
 
 Release 3/25/05
 * vi no longer dies with a segmentation fault if a line does not fit on the
