--- a/README
+++ b/README
@@ -121,8 +121,8 @@ HP HP-UX        B.11.11 and later
 FreeBSD         5.3
 NetBSD          2.0
 
-It has been tested on xterm patch #192, rxvt-unicode 4.2, mlterm 2.9.1, and
-xiterm 0.5.
+It has been tested on xterm patch #192, rxvt-unicode 4.2, mlterm 2.9.1,
+xiterm 0.5, and gnome-terminal 2.10.0.
 
 Successful operation is known for the following encodings: UTF-8, EUC-JP,
 EUC-KR, Big5, Big5-HKSCS, GB 2312, GBK. vi does not support locking-shift
@@ -137,7 +137,7 @@ the erase key once after entering a multibyte character will result in an
 incomplete byte sequence.
 
 
-Gunnar Ritter                                           8/4/05
+Gunnar Ritter                                           10/23/05
 Freiburg i. Br.
 Germany
 <gunnarr@acm.org>
