--- a/README
+++ b/README
@@ -51,6 +51,7 @@ NEC UX/4800         Release11.5 Rev.A
 Control Data EP/IX  2.2.1AA
 FreeBSD             3.1, 4.5, 5.x
 NetBSD              1.6, 2.0
+DragonFlyBSD        1.3.7-DEVELOPMENT
 
 Reports about other Unix systems are welcome, whether successful or not
 (in the latter case add a detailed description). This port of vi is only
@@ -137,7 +138,7 @@ the erase key once after entering a multibyte character will result in an
 incomplete byte sequence.
 
 
-Gunnar Ritter                                           10/23/05
+Gunnar Ritter                                           11/22/05
 Freiburg i. Br.
 Germany
 <gunnarr@acm.org>
