--- a/README
+++ b/README
@@ -52,6 +52,7 @@ Control Data EP/IX  2.2.1AA
 FreeBSD             3.1, 4.5, 5.x
 NetBSD              1.6, 2.0
 DragonFlyBSD        1.3.7-DEVELOPMENT
+Mac OS X            10.4.3
 
 Reports about other Unix systems are welcome, whether successful or not
 (in the latter case add a detailed description). This port of vi is only
@@ -138,7 +139,7 @@ the erase key once after entering a multibyte character will result in an
 incomplete byte sequence.
 
 
-Gunnar Ritter                                           11/22/05
+Gunnar Ritter                                           1/1/06
 Freiburg i. Br.
 Germany
 <gunnarr@acm.org>
